--- a/week02/day04/jquery2/index.html
+++ b/week02/day04/jquery2/index.html
@@ -6,6 +6,16 @@
 	</head>
 <body>
 
+	<form id="newTaskForm">
+		<label>New Item</label>
+			<input id="newItemInput" placeholder="new task">
+			<button id="saveNewItem">Save</button>
+			<button id="cancel">Cancel</button>
+	</form>
+
+
+
+
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="app/scripts/app.js"></script>
 </body>
