--- a/week03/day01/mini-BabiesFirstAngular/index.html
+++ b/week03/day01/mini-BabiesFirstAngular/index.html
@@ -5,11 +5,16 @@
   <title>Document</title>
 </head>
 <body ng-controller="mainCtrl">
+
   Some text
   {{ name }}
-  <div ng-repeat="friend in friends">
+
+  <li ng-repeat="friend in friends">
     {{ friend }}
-  </div>
+  </li>
+
+  <input type="text"></input>
+
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
   <script src="js/app.js"></script>
   <script src="js/mainCtrl.js"></script>
