--- a/week03/day01/angular-friends/index.html
+++ b/week03/day01/angular-friends/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="angularFriends">
 <head>
   <title>Angular Friends</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body ng-controller="FriendController">
+
+  {{ test }}
 
   <h1>The <strong>facebook</strong> Friend Machine</h1>
 
@@ -14,19 +16,34 @@
     <form class="form-inline searchForm" role="form">
       <div class="form-group">
 
-        <input class="form-control" placeholder="Search Anything About Your Friends">
+        <!-- <input class="form-control" placeholder="Search Anything About Your Friends" ng-model="searchTerm">
+          <li ng-repeat="friend in friends | filter: searchTerm">
+            <img src="{{ friend.pic_square }}">
+            {{ friend.name }}
+            {{ friend.current_location.city }}
+            {{ friend.current_location.state }}
+            {{ friend.current_location.country }}
+            {{ friend.current_location.zip }}
+            {{ friend.current_location.latitude }}
+            {{ friend.current_location.longitude }}
+            {{ friend.current_location.id }}
+            {{ friend.current_location.name }}
+            {{ friend.status }}
+            {{ friend.friend_count }}
+            {{ friend.$$hashKey }}
+          </li> -->
         <!-- STEP 5: Get rid of the one above when you uncomment the below-->
-          <!--
-        <input class="form-control" placeholder="Search Name">
-        <input class="form-control" placeholder="Search Location">
-          -->
 
-        <select class="input-medium">
-          <option>Name</option>
-          <option>#Friends</option>
-          <option>City</option>
-          <option>State</option>
-          <option>Country</option>
+        <input class="form-control" placeholder="Search Name" ng-model="searchName.name">
+
+        <input class="form-control" placeholder="Search Location" ng-model="searchLocation.current_location.name">
+
+        <select class="input-medium" ng-model="selectInput">
+          <option value="name">Name</option>
+          <option value="selectInput">#Friends</option>
+          <option value="selectInput">City</option>
+          <option value="selectInput">State</option>
+          <option value="selectInput">Country</option>
         </select>
 
         <select class="input-medium">
@@ -38,24 +55,25 @@
     </form>
 
     <ul>
-      <li class='friend'>
-        <img class="profile-pic" src='http://placebear.com/50/50.jpg'>
+      <li class="friend" ng-repeat="friend in friends | filter: searchName | filter: searchLocation">
+        <img class="profile-pic" src="{{ friend.pic_square }}">
 
-        <h3>Cali Fornia</h3>
+        <h3>{{ friend.name }}</h3>
 
         <div class="location">
-          Location: New Port Beach, California, United States
+          {{ friend.current_location.name }}
         </div>
 
         <div class="status">
-          Status: I hate the snow. I wish I was on the beach right now!!! <span class="hashtag">#ihateprovo</span>
+          {{ friend.status.message }}
         </div>
 
         <div class="num-friends">
-          Friends: 1,367
+          {{ friend.friend_count }}
         </div>
       </li>
     </ul>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
