Added some functionality to the addData button and input fields

--- a/week03/day02/quoteBook/index.html
+++ b/week03/day02/quoteBook/index.html
@@ -10,26 +10,26 @@
   <div>
     {{ test }}
   </div>
-
-  <div ng-repeat="quote in quoteData track by $index" class="quoteDiv">
+  <p>{{ quoteFilter }}</p>
+  <div ng-repeat="quote in quoteData | filter: quoteFilter track by $index" class="quoteDiv">
     <p class="quoteText">"{{ quote.text }}"</p>
     <p class="quoteAuthor">-{{ quote.author }}</p>
     <button name="Remove Quote" type="button" ng-click="removeData($index);">Remove Quote</button>
   </div>
 
   <div>
-    Author: <input type="text" ng-model="authorInput">
-    Text: <input type="text" ng-model="textInput">
+    Author: <input type="text" ng-model="authorInput" placeholder="Author">
+    Text: <input type="text" ng-model="textInput" placeholder="Text">
     <button name="Add Quote" type="button" ng-click="addData();">Add Quote</button>
   </div>
 
   <div>
-    Text: <input type="text" ng-model="quoteFilter">
-    <button name="Filter Quotes" type="button" ng-click="quoteFilterer();">Filter Quotes</button>
+    Text: <input type="text" ng-model="quoteFilter" placeholder="Text to Filter By">
+    <button name="Filter Quotes" type="button" ng-click="assignFilter">Filter Quotes</button>
   </div>
 
   <div>
-    Text: <input type="text" ng-model="removalInput">
+    Text: <input type="text" ng-model="removalInput" placeholder="Find and Remove Text">
     <button name="Find and Remove Quote" type="button" ng-click="findAndRemove();">Find and Remove Quote</button>
   </div>
 
