--- a/week03/day03/chatroom/index.html
+++ b/week03/day03/chatroom/index.html
@@ -6,13 +6,25 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body ng-controller="mainCtrl">
+    <!-- <div>
+      {{ testing }}
+    </div> -->
     <div class="main-container">
       <h1> DevMountain Chat Room </h1>
       <form ng-submit="postData()">
         <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
       </form>
-      <div class="messages-container">
-        <p ng-repeat="message in messages"> {{message.text}} </p>
+      <form>
+        <input class="form-control text-box" type="text" ng-model="messageFilter.text" placeholder="Search">
+      </form>
+      </hr>
+      <div class="messages-container" ng-repeat="message in messages | filter: messageFilter">
+        <p class="messagePosted">
+          {{ message.text }}
+        </p>
+        <p class="timePosted">
+          {{ message.createdAt | date : 'medium' }}
+        </p>
       </div>
     </div>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
