Honestly not sure what changed.

--- a/week03/day04/mini-userProfiles3/index.html
+++ b/week03/day04/mini-userProfiles3/index.html
@@ -4,7 +4,7 @@
   <title>User Profiles</title>
 </head>
 <body ng-controller="MainController">
-  <h6>Test: {{ test }}</h6>
+  <h6>Testing: {{ test }}</h6>
   <div ng-repeat="user in users">
     <h1>{{user.first_name}} {{user.last_name}}</h1>
     <img src="{{user.avatar}}">
