app1 and app2 attempt 2 both done. Working on app3 attempt 2

--- a/week03/day05/angular-drills/app2 - An array/index.html
+++ b/week03/day05/angular-drills/app2 - An array/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body ng-controller="arrayController">
 
-		<div>Test: {{ test }}</div>
+		<!-- <div>Test: {{ test }}</div> -->
 		<!-- <div>{{ data[0] }}</div> -->
 
 		<li ng-repeat="datam in data">
