--- a/week03/day05/angular-drills/app3 - filtering/index.html
+++ b/week03/day05/angular-drills/app3 - filtering/index.html
@@ -1,7 +1,10 @@
-<html>
-	<body>
-		Something
-				<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+<html ng-app="app3">
+	<body ng-controller="mainCtrl">
+		Test: {{ testResult }}
+
+
+
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controller.js"></script>
 		<script src="service.js"></script>
