--- a/week04/day01/nbaRoutes/js/teams/teamTmpl.html
+++ b/week04/day01/nbaRoutes/js/teams/teamTmpl.html
@@ -1,11 +1,12 @@
 <div class="inner-container">
     <div class="logo">
-        <img ng-src="$__FIXME__$">
+        logo
+        <img ng-src="{{ logoPath }}">
     </div>
     <div class="record">
         <h1> Wins: ???????? Losses: ???????? </h1>
     </div>
-    <div class="btn" ng-click="$__FIXME__$"> Add a New Game </div>
+    <div class="btn" ng-click="submitGame"> Add a New Game </div>
     <form ng-show="$__FIXME__$" class="form">
         <span class="large"> Opponent: </span>
         <br />
