Step 5 finished on Angular-Directive-Project

--- a/week04/day02/Angular-Directive-Project/app/dirDisplayTmpl.html
+++ b/week04/day02/Angular-Directive-Project/app/dirDisplayTmpl.html
@@ -1,5 +1,5 @@
 <div><h1>User</h1></div>
 
 <h3>{{ user.name }}</h3>
-<h4 ng-show="showToggle">{{ user.age }}</h4>
-<h4 ng-show="showToggle">{{ user.email }}</h4>
+<h4 ng-show="showToggle">Age: {{ user.age }}</h4>
+<h4 ng-show="showToggle">Email: {{ user.email }}</h4>
