--- a/week04/day02/Angular-Directive-Project/app/homeTmpl.html
+++ b/week04/day02/Angular-Directive-Project/app/homeTmpl.html
@@ -1,5 +1,5 @@
 <div>Testing: {{test}}</div>
 
-<dir-weather></dir-weather>
+<dir-weather current-user="users[0]" weather-call="getWeather(city)"></dir-weather>
 
 <dir-display test="myTest" my-check="checkItOut" ng-repeat="user in users"></dir-display>
