--- a/week04/day02/Angular-Directive-Project/index.html
+++ b/week04/day02/Angular-Directive-Project/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="directivePractice">
 <head>
+  <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
   <meta charset="UTF-8">
   <title>Directives</title>
 </head>
@@ -14,5 +15,6 @@
   <script src="app/homeCtrl.js"></script>
   <script src="app/dirDisplay.js"></script>
   <script src="app/dirWeather.js"></script>
+  <script src="app/weatherService.js"></script>
 </body>
 </html>
