Not sure what changed. Fuck this project.

--- a/week04/day02/Angular-Directive-Project/app/dirDisplayTmpl.html
+++ b/week04/day02/Angular-Directive-Project/app/dirDisplayTmpl.html
@@ -3,3 +3,4 @@
 <h3>{{ user.name }}</h3>
 <h4 ng-show="showToggle">Age: {{ user.age }}</h4>
 <h4 ng-show="showToggle">Email: {{ user.email }}</h4>
+<h4 ng-show="showToggle">City: {{ user.city }}</h4>
