--- a/week04/day02/Angular-Directive-Project/app/dirWeather.html
+++ b/week04/day02/Angular-Directive-Project/app/dirWeather.html
@@ -1,4 +1,4 @@
 <h3>Weather</h3>
 
-<div>{{ currentUser }}</div>
+<div>This is my currentUser: {{ currentUser }}</div>
 <div>This is my weather call: {{ weatherResponse }}</div>
