--- a/week04/day02/mini-timeDirective/mini-routing/index.html
+++ b/week04/day02/mini-timeDirective/mini-routing/index.html
@@ -8,9 +8,9 @@
 
   <div class="greeting">Hello, {{ name }}</div>
 
+  <show-time></show-time>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
   <script src="js/mainCtrl.js" type="text/javascript"></script>
   <script src="js/timeDirective.js" type="text/javascript"></script>
