Got nbaRoutes working and finished AND added the files.

--- a/week04/day01/nbaRoutes/index.html
+++ b/week04/day01/nbaRoutes/index.html
@@ -12,10 +12,10 @@
     <div class="main-container" ng-controller="mainCtrl">
         <div class="menu">
             <ul>
-                <li><a href="/#/"> Home </a></li>
-                <li><a href="/#/teams/utahjazz"> Utah Jazz </a></li>
-                <li><a href="/#/teams/losangeleslakers"> Los Angeles Lakers </a></li>
-                <li><a href="/#/teams/miamiheat"> Miami Heat </a></li>
+                <li><a ui-sref="home"> Home </a></li>
+                <li><a ui-sref="teams({team: 'utahjazz'})"> Utah Jazz </a></li>
+                <li><a ui-sref="teams({team: 'losangeleslakers'})"> Los Angeles Lakers </a></li>
+                <li><a ui-sref="teams({team: 'miamiheat'})"> Miami Heat </a></li>
             </ul>
         </div>
 
