--- a/week04/day04/rtfm-firebase-project/index.html
+++ b/week04/day04/rtfm-firebase-project/index.html
@@ -18,10 +18,9 @@
 <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 
 <script src="./app.js"></script>
-<script src="./mainCtrl.js"></script>
+<script src="./threadService.js"></script>
 <script src="./threads/threadsCtrl.js"></script>
 <script src="./thread/threadCtrl.js"></script>
-<script src="./thread/threadService.js"></script>
 
 </body>
 </html>
