--- a/week04/day04/rtfm-firebase-project/threads/threadsTmpl.html
+++ b/week04/day04/rtfm-firebase-project/threads/threadsTmpl.html
@@ -1,5 +1,5 @@
 <div>
-  <p>Threads</p>
+  <h1>Threads</h1>
   <form name="newThreadForm">
     <input type="text" ng-model="newThreadTitle" placeholder="New thread title..." required>
     <input type="text" ng-model="username" placeholder="Username..." required/>
